--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,7 @@
 body {
-    min-width: 960px;
     background-color: #ffffff;
     margin: 0;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana;
     font-size: 13px;
     font-weight: normal;
     line-height: 18px;
@@ -21,7 +20,8 @@ a {
 }
 
 h1 {
-    margin-bottom: 18px;
+    margin:0;
+    padding: 10px 0 0 0;
     font-size: 30px;
     line-height: 36px;
     font-weight: bold;
@@ -37,6 +37,13 @@ h3 {
     color: #555;
 }
 
+h4 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana; /*bootstrap override*/
+}
 textarea {
     font-family: Inconsolata, Monaco, Consolas, "Lucida Console", monospace;
     font-size: 14px;
@@ -48,20 +55,9 @@ textarea {
     border: 1px solid #bbb;
 }
 
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 960px;
+label {
+    font-weight: 600;/*bootstarp override*/
 }
-
-.container .raw {
-    width: 380px;
-    display: inline;
-    float: left;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
 .container .raw textarea {
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
@@ -77,14 +73,6 @@ textarea {
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(60, 200, 1, 0.4);
     -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(60, 200, 1, 0.4);
     -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(60, 200, 1, 0.4);
-}
-
-.container .formatted {
-    width: 380px;
-    display: inline;
-    float: left;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 .container .formatted textarea {
@@ -120,4 +108,16 @@ textarea {
 
 .CodeMirror-scroll {
     height: 320px;
+}
+
+.beautify-options {
+    background: #ECF0F1;
+    margin-top: 10px;
+    padding-bottom: 5px;
+}
+
+.beautify-options > .row {
+    border: 1px solid #444;
+    margin: 5px;
+    border-radius: 3px;
 }
